--- a/personal.htm
+++ b/personal.htm
@@ -30,6 +30,8 @@ h3
 .style1 {font-family: "Times New Roman", Times, serif}
 span.contentpasted0
 	{}
+span.ui-provider
+	{}
 -->
 </style>
 </head>
@@ -167,6 +169,13 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<img border="0" src="202109_Group.jpg" width="1128" height="754"></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
+		<font face="Times New Roman"><span lang="en-us"><u>2023.04:</u> Dr. Yang 
+		L</span>iu awarded two year grant from Finnish Culture Foundation (The 
+		North Ostrobothnia Regional Fund) for Postdoctoral Research in the field 
+		of Natural Sciences with the topic ¡°Towards Crowdsensing Facial Affect 
+		Encoder for Trustworthy Mental Wellbeing: A study of Workplace Pain 
+		Detection¡±. </font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us"><u>
 		<font face="Times New Roman">2023.03:</font></u></span><font face="Times New Roman"><span lang="en-us"> 
 		Call for participation and submissions: </span>
