--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -333,9 +333,11 @@ Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems,
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair 
-of 20 international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
+of 2<span lang="en-us">1</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
 <span style="line-height: 125%">The 1st Challenge Workshop on Micro-gesture 
-Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023; Chinese-MER 
+Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023;</span></font><span lang="en-us"><font size="4"> 
+1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
+2023) with ACM MM 2023;</font></span><font size="4"><span style="line-height: 125%"> Chinese-MER 
 2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on ¡°What¡¯s Next in Affect Modelling?¡± 
 with ACII 2022; ¡°The 2nd Challenge Workshop on Remote Physiological Signal 
 Sensing (RePSS)¡± with ICCV 2021; ¡°Multimodal Sentiment Analysis in Real-life 
@@ -482,7 +484,7 @@ intelligence (02.2020-)</span></font></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp;</font></span><font size="4"><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: 700; text-decoration: underline">Board 
 member</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
-of Finnish AI society (FAIS, 2019-2021); of Scientific Board of Chinese 
+of Finnish AI society (FAIS, 2019-2023); of Scientific Board of Chinese 
 Association of Science and Technology in Finland&nbsp; (CASTF); of Center for Machine 
 Vision Research, University of Oulu, Finland, 2010-present.</span></font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
