--- a/publications.htm
+++ b/publications.htm
@@ -150,16 +150,21 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2023</b></font></span></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">2</span>. Haoyu Chen, Henglin Shi, Xin 
+<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">3</span>. Haoyu Chen, Henglin Shi, Xin 
 Liu, Xiaobai Li, <b>Guoying Zhao</b>. <u>SMG: A Micro-Gesture Dataset Towards 
 Spontaneous Body Gestures for Emotional Stress State Analysis</u>. International 
 Journal on Computer Vision (IJCV), 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;301. Zitong Yu, 
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;302. Zitong Yu, 
 Yunxiao Qin, Xiaobai Li, Chenxu Zhao, Zhen Lei, and <b>Guoying Zhao</b>. <u>Deep 
 Learning for Face Anti-Spoofing: A Survey</u>.&nbsp; </font></span>
 <font face="Times New Roman" size="4">IEEE Transactions on Pattern Analysis and 
 Machine Intelligence journal (TPAMI). 202<span lang="en-us">3</span>.</font></p>
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;301. Tuomas 
+Varanka, Yante Li, Wei Peng, <b>Guoying Zhao</b>. </font></span>
+<font face="Times New Roman" size="4"><u>Data Leakage and Evaluation Issues in 
+Micro-Expression Analysis</u>. IEEE Transactions on Affective Computing, 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;300</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, 
 Jie Shen, Stefanos Zafeiriou, Maja 
