--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -159,10 +159,13 @@ ul
 <span style="font-size: 18pt; font-family: Times New Roman">HONORS &amp; 
 AWARDS</span></b></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
-<font size="4">-- </font></span><font size="4"><b><font face="Times New Roman">
+-- </span><font face="Times New Roman"><b><u>Member of Academia Europaea, 2023-.</u></b></font></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">--</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman"><font size="4"> </font></span><font size="4"><b><font face="Times New Roman">
 <u>Member of 
-Finnish Academy of Sciences and Letters, 2022-</u></font></b></font></p>
+Finnish Academy of Sciences and Letters, 2022-.</u></font></b></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- </span>
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
