--- a/personal.htm
+++ b/personal.htm
@@ -57,21 +57,24 @@ Professor (tenure track, 2014-2017). She received the Ph.D. degree in computer s
 Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
 She got the Academy Postdoctoral position in 2007, </span>was selected in 2011 
 to the highly competitive Academy Research Fellow position, in 2020 selected to Prestigious Academy Professor position, 
-and in 2022 elected to a </span>
+in 2022 elected to a </span>
 <span style="font-family: Times New Roman; font-weight: 700">member </span>
-<font face="Times New Roman"><b>of Finnish Academy of Sciences and Letter</b>s</font><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
+<font face="Times New Roman"><b>of Finnish Academy of Sciences and Letter</b>s </font><span style="font-family: Times New Roman; font-weight: normal"> 
+and in 2023 elected to a </span>
+<span style="font-family: Times New Roman; font-weight: 700"> member of Academia 
+Europaea</span><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
 authored or co-authored more than <span lang="en-us">300</span> papers in journals and conferences, and 
 has served </span> </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer 
-for many journals and conferences. Her papers have currently over 21500 citations in Google Scholar 
-(h-index 68). She is panel chair for FG 2023, publicity chair for SCIA 2023, and
+for many journals and conferences. Her papers have currently over 23300 citations in Google Scholar 
+(h-index 72). She is 
 <span lang="en-us">t</span>utorial <span lang="en-us">c</span>hair for ICPR 
-2024. S</span><span style="font-family: Times New Roman">he </span>
+2024, panel chair for FG 2023, and publicity chair for SCIA 2023. S</span><span style="font-family: Times New Roman">he </span>
 <span style="font-family: Times New Roman; font-weight: normal">was </span>
 <b>
 <span style="font-family: Times New Roman">general chair</span></b><span style="font-family: Times New Roman"> 
-of &nbsp;Arctic AI days 2022, 2022 International Conference on Image Processing 
-and Media Computing (ICIPMC 2022)</span><span style="font-family: Times New Roman; font-weight: normal"><span lang="en-us"> 
+of &nbsp;Arctic AI days 2022, International Conference on Image Processing 
+and Media Computing 2022 (ICIPMC 2022)</span><span style="font-family: Times New Roman; font-weight: normal"><span lang="en-us"> 
 and </span>ICBEA (2019, 2020)</span><span lang="en-us" style="font-family: Times New Roman">,
 </span><span style="font-family: Times New Roman; font-weight: 700">co-program chair</span><span style="font-family: Times New Roman; font-weight: normal"> of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), </span>
@@ -82,19 +85,20 @@ co-publicity chair</span><span style="font-family: Times New Roman; font-weight:
 for FG 2018, has served as area chairs for several conferences and is<span lang="en-us">/was</span> </span>
 <span style="font-family: Times New Roman; font-weight: 700">associate 
 editor</span><span style="font-family: Times New Roman; font-weight: normal"> for Pattern Recognition, 
-IEEE Trans. on Multimedia, IEEE Transactions on Circuits and Systems for 
-Video Technology, and Image and Vision Computing Journals.</span></font><span lang="EN-US" style="font-size: 12.0pt; line-height: 115%; font-family: Arial,sans-serif">
-</span><span style="font-family: Times New Roman; font-weight: normal">
-<font size="4">She has lectured tutorials at <span lang="en-us">FG 2018, </span>ICPR 2006, ICCV 2009, 
-and SCIA 2013, and authored/edited three books and <span lang="en-us">nine</span> special issues in 
-journals. Dr. Zhao was a Co-Chair of 19 International Workshops / special 
+IEEE Trans. on Multimedia, IEEE Trans. on Circuits and Systems for 
+Video Technology, Image and Vision Computing, Frontiers in Psychology, Journal 
+of Electronic Imaging, and International Journal of Network Dynamics and 
+Intelligence Journals. She has lectured tutorials at FG<span lang="en-us"> 2018, </span>SCIA 
+2013, ICCV 2009 and ICPR 2006, and authored/edited three books and <span lang="en-us">nine</span> special issues in 
+journals. Dr. Zhao was a Co-Chair of 23 International Workshops / special 
 sessions in top venues, such as ICCV, 
 CVPR, ECCV, ACCV and FG. Her students <span lang="en-us">and 
 researchers </span>are 
 frequent recipients of very prestigious and highly competitive 
 <span lang="en-us">positions and </span>fellowships, such 
-<span lang="en-us">as professors/associate professors/assistant professors,</span> <span lang="en-us">Academy of Finland Postdoc position, </span>the Nokia 
-Scholarsh</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">ip, 
+<span lang="en-us">as professors/associate professors/assistant professors,</span> <span lang="en-us">
+Academy of Finland Research Fellow, Academy of Finland Postdoc positions, </span>the Nokia 
+Scholarsh</span></font><font size="4"><span style="font-family: Times New Roman; font-weight: normal">ip, 
 Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">uno T&ouml;nning Research funding<span lang="en-us">, 
 Kauta Foundation grant</span> 
 and Jorma Ollila grant. </font> </span><font size="4">
@@ -102,10 +106,13 @@ and Jorma Ollila grant. </font> </span><font size="4">
 <span style="font-family: Times New Roman; font-weight: 700">IEEE 
 Fellow</span><span style="font-family: Times New Roman; font-weight: normal">, </span>
 <span style="font-family: Times New Roman; font-weight: 700">IAPR Fellow</span><span style="font-family: Times New Roman; font-weight: normal"> and </span>
-<span style="font-family: Times New Roman; font-weight: 700">AAIA Fellow</span><span style="font-family: Times New Roman; font-weight: normal">. Her current research interests include image and video 
-descriptors, gait analysis, dynamic-texture recognition, facial-expression 
-recognition, human motion analysis, and person identification. Her research has 
-been reported by Finnish TV programs, newspapers and MIT Technology Review. </span></font></p>
+<span style="font-family: Times New Roman; font-weight: 700">AAIA Fellow</span><span style="font-family: Times New Roman; font-weight: normal">. 
+Her current research interests include image and video representation, facial expression 
+and micro-expression 
+recognition, human motion analysis, remote physiological signal measure and 
+multi-modal learning. Her research has 
+been reported by Finnish TV programs, newspapers, Technology Discovery TV, MIT T</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">echnology Review, 
+etc. </font> </span></p>
 
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="179%" id="AutoNumber1">
   <tr>
