--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -163,6 +163,9 @@ span.hgkelc
 <span style="font-family: Times New Roman"><font size="5">PROFESSIONAL 
 ACTIVITIES</font></span></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- <u><font face="Times New Roman"> <b>2023-</b></font></u><font face="Times New Roman"><b><u>present, 
+Member of Academia Europaea</u></b></font></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><font face="Times New Roman"><u>2022-present, Member of 
 Finnish Academy of Sciences and Letters </u></font></b> </font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
