--- a/publications.htm
+++ b/publications.htm
@@ -150,7 +150,11 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2023</b></font></span></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">3</span>. Haoyu Chen, Henglin Shi, Xin 
+<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">4</span></font><font face="Times New Roman" size="4">. 
+<b>Guoying Zhao</b>, Xiaobai Li, Yante Li, Matti Pietik&auml;inen. <u>Facial 
+Micro-Expressions: An Overview.</u> Proceedings of the IEEE. 2023. </font></p>
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<font face="Times New Roman" size="4">&nbsp;303. Haoyu Chen, Henglin Shi, Xin 
 Liu, Xiaobai Li, <b>Guoying Zhao</b>. <u>SMG: A Micro-Gesture Dataset Towards 
 Spontaneous Body Gestures for Emotional Stress State Analysis</u>. International 
 Journal on Computer Vision (IJCV), 2023.</font></p>
