--- a/teammembers.htm
+++ b/teammembers.htm
@@ -36,9 +36,9 @@ span.contentpasted0
 		<img border="0" src="Jukka.png" width="112" height="148"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
-		<td height="0" align="center" valign="top" width="222">
+		<td height="0" align="center" valign="top" width="184">
 		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
@@ -48,9 +48,9 @@ span.contentpasted0
 		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
 		<td height="0" align="center" valign="top" width="209">
 		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
-		<td height="0" align="center" valign="top" width="222">
+		<td height="0" align="center" valign="top" width="184">
 		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
@@ -60,9 +60,9 @@ span.contentpasted0
 		<img border="0" src="Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
@@ -73,9 +73,9 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="209">
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		<b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
@@ -91,9 +91,9 @@ span.contentpasted0
 		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Tuomas.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
@@ -105,10 +105,10 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="209">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Abdelrahman MOSTAFA</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font></td>
 		<td height="0" align="center" valign="top" width="225">
@@ -119,9 +119,9 @@ span.contentpasted0
 		<img border="0" src="Atif.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Marko.jpg"></td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Hui.jpg"></td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="184">
 		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
@@ -133,9 +133,10 @@ span.contentpasted0
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
-		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b><font face="Times New Roman">Ms. Hui ZHANG</font></b></td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="224">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><font face="Times New Roman"><b>Ms. 
+		H</b></font><b><font face="Times New Roman">ui&nbsp; KUURILA-ZHANG</font></b></td>
+		<td height="0" align="center" valign="top" width="184">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<b><font face="Times New Roman">　Ms. Lili LIU</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
@@ -146,9 +147,9 @@ span.contentpasted0
 		&nbsp;</td>
 		<td width="226" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
@@ -158,9 +159,9 @@ span.contentpasted0
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
@@ -174,10 +175,10 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		　<img border="0" src="Haotian.jpg"></td>
 		<td width="223" height="0" align="center" valign="top">
+		<img border="0" src="Sheraz.jpg"></td>
+		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
+		<td width="184" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
@@ -188,9 +189,9 @@ span.contentpasted0
 		<td width="223" height="0" align="center" valign="top">
 		<b>
 		<font face="Times New Roman">Mr. Sheraz Khan </font></b></td>
-		<td width="222" height="0" align="center" valign="top">
+		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
+		<td width="184" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
@@ -205,9 +206,9 @@ span.contentpasted0
 		<img border="0" src="Qing.jpg" width="132" height="165"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
@@ -220,9 +221,9 @@ span.contentpasted0
 		202</font>3&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
