--- a/personal.htm
+++ b/personal.htm
@@ -177,12 +177,12 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
-		<font face="Times New Roman"><span lang="en-us"><u>2023.04:</u> Dr. Yang 
-		L</span>iu awarded two year grant from Finnish Culture Foundation (The 
+		<font face="Times New Roman"><span lang="en-us"><u>2023.04:</u> <b>Dr. Yang 
+		L</b></span><b>iu</b> awarded two year grant from <b>Finnish Culture Foundation</b> (The 
 		North Ostrobothnia Regional Fund) for Postdoctoral Research in the field 
-		of Natural Sciences with the topic ¡°Towards Crowdsensing Facial Affect 
+		of Natural Sciences with the topic &quot;Towards Crowdsensing Facial Affect 
 		Encoder for Trustworthy Mental Wellbeing: A study of Workplace Pain 
-		Detection¡±. </font></p>
+		Detection&quot;. </font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us"><u>
 		<font face="Times New Roman">2023.03:</font></u></span><font face="Times New Roman"><span lang="en-us"> 
 		Call for participation and submissions: </span>
