--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -200,6 +200,10 @@ chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</sp
 <span style="font-family: Times New Roman">Tutorial Chair for ICPR 2024 
 (Kolkata, India).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- <span style="font-family: Times New Roman"><u><b>International 
+Advisory Committee member</b></u>: ICACA 2024 (3-rd International Conference on 
+Advanced Computing and Applications (ICACA-2024) by CSI Kolkata Chapter).</span></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4"><span lang="en-us">--</span> <b><u>
 <span style="font-family: Times New Roman">Panels Chair for FG 
 2023 (Hawaii, USA).</span></u></b></font></p>
@@ -341,10 +345,13 @@ of 2<span lang="en-us">1</span> international workshops</span><span style="font-
 Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023;</span></font><span lang="en-us"><font size="4"> 
 1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
 2023) with ACM MM 2023;</font></span><font size="4"><span style="line-height: 125%"> Chinese-MER 
-2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on ¡°What¡¯s Next in Affect Modelling?¡± 
-with ACII 2022; ¡°The 2nd Challenge Workshop on Remote Physiological Signal 
-Sensing (RePSS)¡± with ICCV 2021; ¡°Multimodal Sentiment Analysis in Real-life 
-Media Challenge and Workshop¡± with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchles</font></span><span style="line-height: 125%"><font size="4">s 
+2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on </font></span> <font face="Times New Roman">
+<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">What¡¯s Next in Affect Modelling?</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> 
+with ACII 2022; </font></span> <font face="Times New Roman">
+<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">The 2nd Challenge Workshop on Remote Physiological Signal 
+Sensing (RePSS)</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> with ICCV 2021; </font></span> <font face="Times New Roman">
+<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">Multimodal Sentiment Analysis in Real-life 
+Media Challenge and Workshop</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchles</font></span><span style="line-height: 125%"><font size="4">s 
 Technologies; ''C</font></span><font size="4" face="Times New Roman">VPM 2020: 
 International Workshop and Challenge on Computer Vision for Physiological 
 Measurement'' with CVPR 2020; W</font><font size="4"><span lang="EN-US" style="line-height: 125%; ">orkshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
