--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -346,7 +346,7 @@ Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023;</span></font>
 1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
 2023) with ACM MM 2023;</font></span><font size="4"><span style="line-height: 125%"> Chinese-MER 
 2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on </font></span> <font face="Times New Roman">
-<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">What¡¯s Next in Affect Modelling?</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> 
+<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">What<span lang="en-us">'</span>s Next in Affect Modelling?</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> 
 with ACII 2022; </font></span> <font face="Times New Roman">
 <span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">The 2nd Challenge Workshop on Remote Physiological Signal 
 Sensing (RePSS)</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> with ICCV 2021; </font></span> <font face="Times New Roman">
